# Vec

./: .project  Examples.hs  Examples2.hs  LICENSE  README  Vec.cabal  baseline.c
Data/: Vec.hs
Data/Vec/: Base.hs  Instances.hs  LinAlg.hs  Nat.hs  Packed.hs
examples/: Examples.hs  Overlap.hs  UnboxedArray.hs  baseline.c
